RESOLVED FIXED56019
jquery/manipulation.html fails after r80598
https://bugs.webkit.org/show_bug.cgi?id=56019
Summary jquery/manipulation.html fails after r80598
Csaba Osztrogonác
Reported 2011-03-09 08:46:45 PST
After http://trac.webkit.org/changeset/80598 jquery/manipulation.html fails on the Qt bot. (and rarely jquery/effects.html too) pretty diffs: http://build.webkit.org/results/Qt%20Linux%20Release/r80638%20(29529)/jquery/effects-pretty-diff.html http://build.webkit.org/results/Qt%20Linux%20Release/r80638%20%2829529%29/jquery/manipulation-pretty-diff.html jquery/manipulation.html doesn't fail on its own, but with: $ Tools/Scripts/run-webkit-tests inspector jquery It might be a GC related bug.
Attachments
Patch (10.66 KB, patch)
2011-03-09 18:32 PST, Oliver Hunt
barraclough: review+
Csaba Osztrogonác
Comment 1 2011-03-09 08:54:52 PST
On 64 bit Qt Linux, jquery/event.html fails because of this bug.
Csaba Osztrogonác
Comment 2 2011-03-09 09:48:42 PST
I added jquery tests to the Qt Skipped list: http://trac.webkit.org/changeset/80644
Csaba Osztrogonác
Comment 3 2011-03-09 09:58:00 PST
(In reply to comment #1) > On 64 bit Qt Linux, jquery/event.html fails because of this bug. pretty diff for this fail: (similar to jquery/manipulation.html) http://webkit.sed.hu/buildbot/results/x86-64%20Linux%20Qt%20Release/r80643%20%2819338%29/jquery/event-pretty-diff.html
Martin Robinson
Comment 4 2011-03-09 15:00:22 PST
Oliver Hunt
Comment 5 2011-03-09 18:32:48 PST
Gavin Barraclough
Comment 6 2011-03-09 18:34:50 PST
Comment on attachment 85274 [details] Patch r+, assuming you've perf tested! :-)
Martin Robinson
Comment 7 2011-03-09 20:01:04 PST
Do you mind unskipping the tests when landing this patch?
Oliver Hunt
Comment 8 2011-03-10 11:29:38 PST
WebKit Review Bot
Comment 9 2011-03-10 16:40:20 PST
http://trac.webkit.org/changeset/80738 might have broken GTK Linux 32-bit Debug and GTK Linux 64-bit Debug The following tests are not passing: fast/js/large-expressions.html jquery/effects.html
Oliver Hunt
Comment 10 2011-03-10 16:44:06 PST
(In reply to comment #9) > http://trac.webkit.org/changeset/80738 might have broken GTK Linux 32-bit Debug and GTK Linux 64-bit Debug > The following tests are not passing: > fast/js/large-expressions.html > jquery/effects.html gah!
Martin Robinson
Comment 11 2011-03-10 16:56:51 PST
(In reply to comment #10) > (In reply to comment #9) > > fast/js/large-expressions.html > > jquery/effects.html > > gah! fast/js/large-expressions.html has been failing for some time, so for that particular test, I think this is a false alarm. I don't know about jquery/effect.html though.
Sergio Villar Senin
Comment 12 2011-03-11 02:19:08 PST
(In reply to comment #11) > (In reply to comment #10) > > > (In reply to comment #9) > > > fast/js/large-expressions.html > > > jquery/effects.html > > > > gah! > > fast/js/large-expressions.html has been failing for some time, so for that particular test, I think this is a false alarm. I don't know about jquery/effect.html though. I'm skipping both for the moment. BTW we have been experiencing some different crashes in JSC: http://webkit-bots.igalia.com/amd64/svn_80828.core-when_1299832662-_-who_DumpRenderTree-_-why_11.trace.html http://webkit-bots.igalia.com/amd64/svn_80831.core-when_1299835193-_-who_DumpRenderTree-_-why_11.trace.html not sure if related to this change.
Note You need to log in before you can comment on or make changes to this bug.